# scalpel

./: .gitignore  README.md  claude_code_config.json  pyproject.toml  verify_roundtrip.py
.claude/: SKILL.md
benchmarks/: harness.py
benchmarks/results/: benchmark.csv
benchmarks/tasks/: auth_service.py  cache_layer.py  config_parser.py  data_validator.py  event_emitter.py  file_processor.py  http_client.py  rate_limiter.py  retry_handler.py  task_queue.py
docs/: SPEC.md
src/scalpel/: __init__.py  core.py  measure.py  plugin.py  server.py  types.py
tests/: test_core.py  test_measure.py  test_roundtrip.py
